# namada-scenario-tester

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker_run.sh  local_run.sh  run.sh
.github/workflows/: build-and-push-antithesis.yml  build-and-push-namada.yml  build-and-push.yml
artifacts/: test_proposal.json
scenarios/: bond.yaml  bonds.json  governance.json  init_account.json  multisig.json  mutlsiigor  org.json  scenario-104-rtuxv8F3.json  scenario-106-6QpFwGKN.json  scenario-107-XQMvXbrd.json  scenario-107-ekb0A3xV.json  scenario-108-4zBH8JQM.json  scenario-108-FMPpGmlm.json  scenario-108-LKDQa4ur.json  scenario-112-pyo4Uu9V.json  scenario-129-vk6NE8j5.json  scenario-132-4FJvmWxz.json  scenario-135-XtBa4hnQ.json  scenario-154-r67CM3Pw.json  scenario-157-oR64dH8T.json  scenario-159-PXQQQi6o.json  scenario-159-QWJs7X95.json  scenario-171-6LepfyEG.json  scenario-206-SggOcobK.json  scenario-209-gitjWETy.json  scenario-210-iDwaDJQh.json  scenario-210-mI18rhV5.json  scenario-212-RRAvK0SI.json  scenario-212-q4RNt0QC.json  scenario-213-0t9IC8hI.json  scenario-213-YZLmk66X.json  scenario-213-doJAOmEA.json  scenario-214-8WT3Laeh.json  scenario-214-lIVJ6JQA.json  scenario-215-HEqzdYox.json  scenario-215-zqM2tEku.json  scenario-216-8Iz8OmDP.json  scenario-216-jKVqABXx.json  scenario-216-ylCFjMHp.json  scenario-223-6T2wUHKc.json  (+27 more)
src/: config.rs  lib.rs  main.rs  report.rs  runner.rs  scenario.rs
src/antithesis/: mod.rs
src/checks/: balance.rs  bonds.rs  mod.rs  reveal_pk.rs  step.rs  storage.rs  tx.rs
src/entity/: address.rs
src/queries/: account.rs  balance.rs  bonded_stake.rs  mod.rs  proposal.rs  proposals.rs  validators.rs
src/sdk/: mod.rs  namada.rs
src/state/: state.rs
src/tasks/: batch.rs  become_validator.rs  bond.rs  bond_batch.rs  change_consensus_key.rs  change_metadata.rs  claim_rewards.rs  deactivate_validator.rs  init_account.rs  init_default_proposal.rs  init_pgf_funding_proposal.rs  init_pgf_steward_proposal.rs  init_proposal.rs  init_propsosal.rs  init_validator.rs  mod.rs  reactivate_validator.rs  redelegate.rs  redelegate_batch.rs  reveal_pk.rs  shielded_sync.rs  transparent_transfer_batch.rs  tx_reveal_pk.rs  tx_shielded_transfer.rs  tx_shielded_transfer_batch.rs  tx_shielding_transfer.rs  tx_transfer.rs  tx_transparent_transfer.rs  tx_unshielding_transfer.rs  unbond.rs  update_account.rs  vote.rs  wallet_new_key.rs  withdraw.rs
src/utils/: misc.rs  mod.rs  proposal.rs  settings.rs  valid_proposal.rs  value.rs
src/waits/: epoch.rs  height.rs  mod.rs
