[package]
name = "namada-scenario-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
rand = {version = "0.8", default-features = false}
rand_core = {version = "0.6", default-features = false}
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.39.0", default-features = false, features = ["tendermint-rpc", "std", "async-send", "download-params", "rand"] }
tendermint-config = "0.36.0"
tendermint-rpc = { version = "0.36.0", features = ["http-client"]}
tokio = {version = "1.8.2", default-features = false}
tempfile = "3.10.1"
async-trait = "0.1.74"
markdown-gen = "1.2.1"
reqwest = "0.11.22"
minio = "0.1.0"
derive_builder = "0.20.0"
dyn-clone = "1.0.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
weighted_rand = "0.4.2"
fake = "2.9.2"
futures = "0.3.30"
itertools = "0.12.1"
antithesis_sdk = "0.1.6"

[[bin]]
name = "scenario-tester"
path = "src/main.rs"

[[bin]]
name = "scenario-generator"
path = "src/gen/main.rs"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
